--- a/ghi/new-conference.html
+++ b/ghi/new-conference.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>New Location :: Conference GO!</title>
-    <script type="module" src="js/new-location.js"></script>
+    <script type="module" src="js/new-conference.js"></script>
 </head>
 
 <body>
@@ -27,10 +27,10 @@
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="new-location.html">New location</a>
+                            <a class="nav-link" aria-current="page" href="new-location.html">New location</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="new-conference.html">New conference</a>
+                            <a class="nav-link active" aria-current="page" href="new-conference.html">New conference</a>
                         </li>
                     </ul>
                     <form class="d-flex">
@@ -47,26 +47,41 @@
             <div class="row">
                 <div class="offset-3 col-6">
                     <div class="shadow p-4 mt-4">
-                        <h1>Create a new location</h1>
-                        <form id="create-location-form">
+                        <h1>Create a new conference</h1>
+                        <form id="create-conference-form">
                             <div class="form-floating mb-3">
                                 <input placeholder="Name" required type="text" name="name" id="name"
                                     class="form-control">
                                 <label for="name">Name</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input placeholder="Room count" required type="number" name="room_count" id="room_count"
+                                <input placeholder="mm/dd/yyyy" required type="date" name="starts" id="starts"
                                     class="form-control">
-                                <label for="room_count">Room count</label>
+                                <label for="starts">Starts</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <input placeholder="City" required type="text" name="city" id="city"
+                                <input placeholder="mm/dd/yyyy" required type="date" name="ends" id="ends"
                                     class="form-control">
-                                <label for="city">City</label>
+                                <label for="ends">Ends</label>
                             </div>
                             <div class="mb-3">
-                                <select required name="state" id="state" class="form-select">
-                                    <option selected value="">Choose a state</option>
+                                <label for="description">Description</label>
+                                <textarea required type="text" name="description" id="description" class="form-control"
+                                    rows="3"></textarea>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input placeholder="Maximum Presentations" required type="number"
+                                    name="max_presentations" id="max_presentations" class="form-control">
+                                <label for="max_presentations">Maximum Presentations</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input placeholder="Maximum Attendees" required type="number" name="max_attendees"
+                                    id="max_attendees" class="form-control">
+                                <label for="max_attendees">Maximum Attendees</label>
+                            </div>
+                            <div class="mb-3">
+                                <select required name="location" id="location" class="form-select">
+                                    <option selected value="">Choose a location</option>
                                 </select>
                             </div>
                             <button class="btn btn-primary">Create</button>
