--- a/ghi/new-presentation.html
+++ b/ghi/new-presentation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>New Conference :: Conference GO!</title>
-    <script type="module" src="js/new-conference.js"></script>
+    <title>New Presentation :: Conference GO!</title>
+    <script type="module" src="js/new-presentation.js"></script>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search conferences"
                             aria-label="Search">
-                        <button class="btn btn-outline-success me-2" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit">Search</button>
                         <a class="btn btn-primary" href="attend-conference.html">Attend!</a>
                     </form>
                 </div>
@@ -48,12 +48,12 @@
             <div class="row">
                 <div class="offset-3 col-6">
                     <div class="shadow p-4 mt-4">
-                        <h1>Create a new conference</h1>
-                        <form id="create-conference-form">
+                        <h1>Create a new presentation</h1>
+                        <form id="create-presentation-form">
                             <div class="form-floating mb-3">
-                                <input placeholder="Name" required type="text" name="name" id="name"
-                                    class="form-control">
-                                <label for="name">Name</label>
+                                <input placeholder="Presenter name" required type="text" name="presenter_name"
+                                    id="presenter_name" class="form-control">
+                                <label for="presenter_name">Presenter Name</label>
                             </div>
                             <div class="form-floating mb-3">
                                 <input placeholder="mm/dd/yyyy" required type="date" name="starts" id="starts"
@@ -94,4 +94,4 @@
     </main>
 </body>
 
-</html>
+</html> -->
